@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2011-05-20 (SVN):
+    * bgmusic.c: moved the commented out code to bgmusic.old so that the
+      file's contents can be followed more easily.
+
+2011-05-20 (SVN):
     * added COM_FileGetExtension to return a file's extension or empty
       string if there is none. renamed the existing COM_FileExtension
       to COM_ExtractExtension and tidied it a bit.
